tests/requests/snapshots/auth/can_login@auth-2.snap
---
source: tests/requests/auth.rs
assertion_line: 108
expression: response.headers()
---
{
    "authorization": "Bearer JWT",
    "set-cookie": "accessToken=JWT; HttpOnly; Partitioned; Secure; Path=/; Max-Age=3600",
    "set-cookie": "refreshToken=JWT; HttpOnly; Partitioned; Secure; Path=/; Max-Age=604800",
    "content-length": "NUMBER",
}
