tests/requests/snapshots/auth/can_login@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 105
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"createdAt\":\"DATE\",\"email\":\"admin@mail.org\",\"name\":\"John Doe\",\"pid\":\"PID\"}",
)
