tests/requests/snapshots/auth/can_register_admin_and_org@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 52
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"message\":\"Account created successfully\"}",
)
